--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -21,4 +21,7 @@ h1 {
   font-family: condensed;
   color: white;
   font-weight: bolder;
+  width: calc(100% - 32px);
+  white-space: nowrap;
+  overflow: scroll;
 }
