--- a/src/app/new/new.page.scss
+++ b/src/app/new/new.page.scss
@@ -30,6 +30,7 @@
 label {
   display: flex;
   align-items: center;
+  min-width: fit-content;
   width: 4.5rem;
 }
 ion-range {
